--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ box-sizing: border-box;*/
 
 /*----START----
 стили текста по умолчанию для всей страницы*/
-.body {
+body {
   font-family: 'Lato';
   font-style: normal;
   font-weight: normal;
@@ -51,13 +51,6 @@ box-sizing: border-box;*/
 стили текста по умолчанию для всей страницы*/
 
 
-.header {
-  position: fixed;/*прикрепление хедера при скролле*/
-  top: 0;/*позиционирование хедера*/
-  left: 0;/*позиционирование хедера*/
-  width: 100%;/*фиксация на экране по размеру*/
-}
-
 /*----START----
 общий врапер*/
 .wrapper {
@@ -68,12 +61,22 @@ box-sizing: border-box;*/
 общий врапер*/
 
 
+
+/*----HEADER----*/
+
+.header {
+  position: fixed;/*прикрепление хедера при скролле*/
+  top: 0;/*позиционирование хедера*/
+  left: 0;/*позиционирование хедера*/
+  width: 100%;/*фиксация на экране по размеру*/
+}
+
 .header-wrapper {
   display: flex;
   flex-wrap: wrap;/*для безопасного переноса элементов при масштабировании*/
   justify-content: space-between;
   align-items: self-end;
-  padding-top: 56px;
+  padding-top: 56px;/*геометрия задается паддингами от содержимого блока */
 }
 
 .header-list {
@@ -100,8 +103,104 @@ box-sizing: border-box;*/
   opacity: 0.75;
 }
 
+
+/*----INTRO----*/
+
 .intro {
-  height: 100vh;
+  min-height: 100vh;/* min-height (при переполнении содержимое не выйдет за границу блока, 100vh-высота области просмотра) */ 
   background: url(/assets/img/Hero.jpg) no-repeat center;/* два последних значения важны!!!*/
   background-size: cover;/* это значение важно!!!*/
+  padding-top: 263px;/*геометрия задается паддингами от содержимого блока */
+}
+
+.intro-title {
+  max-width: 619px;
+  flex-shrink: 0;
+  margin-bottom: 22px;
+  color: #FFF;
+  font-size: 50px;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.intro-subtitle {
+  max-width: 546px;
+  margin-bottom: 59px;
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.search-form-input {
+  display: flex;
+  flex-wrap: wrap;
+  border: 0;
+}
+
+.search-form-field {
+  width: 297px;
+  background: url(../assets/img/svg/circle.svg) transparent no-repeat left top;/* background  в виде .svg картинки с е
+  transparent фоном */
+  background-size: 20px;/* размер circle.svg оформленного в виде background */
+  border: none;
+  border-bottom: #BFC0C5 3px solid;/* горизонтальная полоса под инпутом */
+  outline: none;/*свойство убирает рамку при активности элемента*/
+  margin-right: 60px;
+  padding-left: 43px;/* расстояние для поля ввода от левого края инпута */
+  padding-bottom: 22px;/* расстояние от border-bottom до input */
+  font-weight: 500;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.search-form-field::placeholder {
+  font-weight: 500;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.search-form-submit {
+  padding: 15px 39px;/*геометрия задается паддингами от содержимого блока */
+  color: #ffffff;
+  background: #1B7DFF;
+  border: none;
+}
+
+.search-form-submit:hover,.search-form-submit:focus,.search-form-submit:active {
+  background: #114e9e;
+  transition: 400ms;
+}
+
+
+/*----BENEFITS----*/
+
+.benefits-wrapper {
+  position: relative;/* для позиционирования .benefits-title */ 
+  max-width: 1262px;
+  margin: 0 auto;/* выравниваем посередине */
+  background-color: #ffffff;
+  box-shadow: 0px 2px 20px 0px rgba(21, 24, 36, 0.16);
+}
+
+.benefits-title {
+  position: absolute;/* выделение блока из общего потока */
+  transform: translateY(-100%);/* сдвигаем блок по вертикали на всю его высоту вверх */
+  width: 100%;
+  background-color: #ffffff;
+  font-size: 35px;
+  font-weight: 500;
+  line-height: normal;
+  padding: 93px 100px 88px 100px;/*геометрия задается паддингами от содержимого блока */
+}
+
+.benefits-cards {
+  display: grid;/* блок пишем на гридах */
+  grid-template-columns: repeat(3, 1fr);/* создаем 3 колонки по одному fr */
+  column-gap: 55px;
+  padding: 0 100px;
+}
+
+.benefits-card {
+  grid-column: span 1;/* каждая колонка занимает 1 */
 }
