--- a/css/style.css
+++ b/css/style.css
@@ -546,20 +546,67 @@ img {
   width: 100%;
 }
 
+/*внутри этой обертки находятся 2 блока, .video-format формирует соотношение сторон при масштабировании видео, но он перекрывается блоком .video-item, в котором видео контент и отображается*/
 .video-wrapper {
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
 }
 
+/*вычисление паддинга для пропорционального масштабирования блока .video (9/16*100=56,25%) при соотношении сторон видео 16 к 9.*/
 .video-format {
   padding-top: 56.25%;
 }
 
+/*устанавливаем position: absolute; для перекрытия блока .video-format и отображения видео контента*/
 .video-item {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+
+/*----FOOTER----*/
+
+.footer {
+  background: #0E1D28;
+  padding: 119px 0;
+}
+
+.footer-item {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-logo {
+  width: 50%;/*задаем ширину блока 50%*/
+}
+
+.footer-nav {
+  width: 50%;/*обязательно задаем ширину, чтобы содержимое раздвинулось на всю область*/
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-nav-title {
+  color: #FFF;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.footer-nav-link {
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-decoration: none;
+}
+
+.footer-nav-link:hover,.footer-nav-link:focus,.footer-nav-link:active {
+  transition: 100ms;
+  opacity: .65;
 }
